[package]
name = "pxe_waiter"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
tftpd = "0.3.0"
tokio = { version = "1.32.0", features = [
    "default",
    "macros",
    "rt-multi-thread",
] }
warp = "0.3.5"


[profile.release]
strip = true      # Automatically strip symbols from the binary.
lto = true        # Run an LTO optimisation pass over the final binary to shake out any dead leftovers
codegen-units = 1 # Split all the units so LTO can go to town
